--- a/laravel/resources/assets/css/style.css
+++ b/laravel/resources/assets/css/style.css
@@ -51,6 +51,23 @@ src: url("../font/Nexa-Light.otf") format("opentype");
 .navbar-default {
  border: 0;
 }
+.scroll-down{
+  background: #fff !important;
+  -webkit-transition: all 1000ms ease;
+  -moz-transition: all 1000ms ease;
+  -ms-transition: all 1000ms ease;
+  -o-transition: all 1000ms ease;
+  transition: all 1000ms ease;
+}
+.scroll-up{
+  background: transparent !important;
+  -webkit-transition: all 1000ms ease;
+  -moz-transition: all 1000ms ease;
+  -ms-transition: all 1000ms ease;
+  -o-transition: all 1000ms ease;
+  transition: all 1000ms ease;
+}
+
 .navbar-default .navbar-nav > li > a{
   color: #07509c;
 }
@@ -75,7 +92,10 @@ src: url("../font/Nexa-Light.otf") format("opentype");
   }
 }
 .navbar-brand{
-  padding: 7px 15px;
+  padding: 0px 15px;
+}
+.navbar-brand img{
+  width: 160px;
 }
 
 .footer{
