--- a/laravel/resources/assets/css/style.css
+++ b/laravel/resources/assets/css/style.css
@@ -48,6 +48,12 @@ src: url("../font/Nexa-Light.otf") format("opentype");
 .flat{
  border-radius: 0 !important;
 }
+
+html,body{
+  font-family: 'Nexalight';
+  width: 100%;
+  height: 100%;
+}
 .navbar-default {
  border: 0;
 }
@@ -69,6 +75,9 @@ src: url("../font/Nexa-Light.otf") format("opentype");
 }
 
 .navbar-default .navbar-nav > li > a{
+
+  /*font-family: 'Nexabold';*/
+  font-weight: 600;
   color: #07509c;
 }
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus{
@@ -121,6 +130,9 @@ src: url("../font/Nexa-Light.otf") format("opentype");
 .footer{
   font-family: 'Nexabold';
 }
+.footer strong{
+  letter-spacing: 1px;
+}
 .footer .contact{
   margin-top: 15px;
   margin-bottom: 15px;
@@ -128,6 +140,7 @@ src: url("../font/Nexa-Light.otf") format("opentype");
 .footer p{
   font-family: 'Nexalight';
 }
+
 .footer .menu{
   padding-top: 10px;
 }
@@ -140,16 +153,21 @@ src: url("../font/Nexa-Light.otf") format("opentype");
 }
 .footer .footer-menu li a{
   font-family: 'Nexalight';
-  font-weight: 600;
+  font-weight: 300;
   line-height: 1.5;
   color: #fff;
 }
 
 .footer .copyright{
   font-family: 'Nexalight';
+  font-weight: 300;
   border-top: 2px solid #fff;
   padding-top: 5px;
-}/*app */
+}
+
+.footer .copyright p{
+  padding-top: 5px;
+}
 .footer .social-wrap{
   margin-top: 15px !important;
   margin: auto;
@@ -163,7 +181,7 @@ src: url("../font/Nexa-Light.otf") format("opentype");
 }
 .footer .social li{
   float: left;
-  padding: 13px;
+  padding: 15px 13px;
   width: 50px;
   height: 50px;
   margin: 10px;
